--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -118,17 +118,72 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\GosuArenaDatabaseConvention.cs" />
+    <Compile Include="Models\Bot.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BotScriptRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Content\GosuArena.css" />
     <Content Include="Global.asax" />
+    <Content Include="Infrastructure\CreateGosuArenaDatabase.sql" />
+    <Content Include="Scripts\actionQueue.js" />
+    <Content Include="Scripts\arenaState.js" />
+    <Content Include="Scripts\bot.js" />
+    <Content Include="Scripts\botOptions.js" />
+    <Content Include="Scripts\botSpecs.js" />
+    <Content Include="Scripts\bots\bot1.js" />
+    <Content Include="Scripts\bots\bot2.js" />
+    <Content Include="Scripts\bots\bot3.js" />
+    <Content Include="Scripts\bots\bot4.js" />
+    <Content Include="Scripts\bots\circler.js" />
+    <Content Include="Scripts\bots\cornerCollider.js" />
+    <Content Include="Scripts\bots\cornerCollider2.js" />
+    <Content Include="Scripts\bots\eastbot.js" />
+    <Content Include="Scripts\bots\northbot.js" />
+    <Content Include="Scripts\bots\southbot.js" />
+    <Content Include="Scripts\bots\turnbot.js" />
+    <Content Include="Scripts\bots\westbot.js" />
+    <Content Include="Scripts\bullet.js" />
+    <Content Include="Scripts\collisionDetector.js" />
+    <Content Include="Scripts\engine.js" />
+    <Content Include="Scripts\fakeClock.js" />
+    <Content Include="Scripts\gameClock.js" />
+    <Content Include="Scripts\gameSpecs.js" />
+    <Content Include="Scripts\gameVisualizer.js" />
+    <Content Include="Scripts\legend.js" />
+    <Content Include="Scripts\lib\jasmine-1.3.0\jasmine-html.js" />
+    <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.css" />
+    <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.js" />
+    <Content Include="Scripts\gosu\snapshot.js" />
+    <Content Include="Scripts\gosu\snapshotSpecs.js" />
+    <Content Include="Scripts\match.js" />
+    <Content Include="Scripts\gosu\math\collissions.js" />
+    <Content Include="Scripts\gosu\math\collissionsSpecs.js" />
+    <Content Include="Scripts\gosu\math\line.js" />
+    <Content Include="Scripts\gosu\math\lineSpecs.js" />
+    <Content Include="Scripts\gosu\math\matchers.js" />
+    <Content Include="Scripts\gosu\math\math.js" />
+    <Content Include="Scripts\gosu\math\mathSpecs.js" />
+    <Content Include="Scripts\gosu\math\point.js" />
+    <Content Include="Scripts\gosu\math\pointSpecs.js" />
+    <Content Include="Scripts\gosu\math\rectangle.js" />
+    <Content Include="Scripts\gosu\math\rectangleSpecs.js" />
+    <Content Include="Scripts\gosu\math\vector.js" />
+    <Content Include="Scripts\gosu\math\vectorSpecs.js" />
+    <Content Include="Scripts\rectangleCache.js" />
+    <Content Include="Scripts\settings.js" />
+    <Content Include="Scripts\SpecRunner.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -140,7 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -150,6 +205,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\Local.pubxml" />
+    <Content Include="Views\Home\Profile.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
