--- a/src/GosuArena/GosuArena/Web.config
+++ b/src/GosuArena/GosuArena/Web.config
@@ -13,11 +13,11 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
+    <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
   </configSections>
 
   <connectionStrings>
-    <add name="GosuArena"
-         connectionString="server=.\SQLEXPRESS;database=gosuarena;User Id=arenauser;Password=arenauser" />
+    <add name="GosuArena" connectionString="server=.\SQLEXPRESS;database=gosuarena;User Id=arenauser;Password=arenauser" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -59,6 +59,9 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
+    <httpHandlers>
+      <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
+    </httpHandlers>
   </system.web>
 
   <system.webServer>
@@ -82,7 +85,14 @@
            preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
            type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core"
+           resourceType="File" preCondition="" />
     </handlers>
+
+    <staticContent>
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".less" mimeType="text/css" />
+    </staticContent>
   </system.webServer>
 
   <elmah>
@@ -92,19 +102,13 @@
   </elmah>
 
   <runtime>
-
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
       <dependentAssembly>
-
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-
       </dependentAssembly>
-
     </assemblyBinding>
-
   </runtime>
 
+  <dotless minifyCss="false" cache="true" web="false" />
 </configuration>
