--- a/src/GosuArena/GosuArena/packages.config
+++ b/src/GosuArena/GosuArena/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotless" version="1.4.0.0" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net40" />
   <package id="Gosu.Commons" version="1.1.4" targetFramework="net40" />
