Added bootstrap 3 and styled the login page

--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -148,6 +148,36 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\bootstrap-3.0.3\js\affix.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\alert.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\button.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\carousel.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\collapse.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\dropdown.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\modal.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\popover.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\scrollspy.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tab.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\index.html" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\affix.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\alert.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\button.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\carousel.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\collapse.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\dropdown.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\modal.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\phantom.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\popover.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\scrollspy.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\tab.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\tooltip.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\unit\transition.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\vendor\jquery.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\vendor\qunit.css" />
+    <Content Include="Content\bootstrap-3.0.3\js\tests\vendor\qunit.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\tooltip.js" />
+    <Content Include="Content\bootstrap-3.0.3\js\transition.js" />
     <Content Include="Content\GosuArena.less" />
     <Content Include="Global.asax" />
     <Content Include="Infrastructure\ElmahPermissions.sql" />
@@ -183,6 +213,50 @@
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.js" />
     <Content Include="Scripts\gosu\snapshot.js" />
     <Content Include="Scripts\gosu\snapshotSpecs.js" />
+    <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\bootstrap-3.0.3\js\.jshintrc" />
+    <Content Include="Content\bootstrap-3.0.3\less\alerts.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\badges.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\bootstrap.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\breadcrumbs.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\button-groups.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\buttons.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\carousel.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\close.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\code.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\component-animations.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\dropdowns.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\forms.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\glyphicons.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\grid.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\input-groups.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\jumbotron.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\labels.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\list-group.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\media.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\mixins.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\modals.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\navbar.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\navs.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\normalize.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\pager.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\pagination.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\panels.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\popovers.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\print.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\progress-bars.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\responsive-utilities.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\scaffolding.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\tables.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\theme.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\thumbnails.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\tooltip.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\type.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\utilities.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\variables.less" />
+    <Content Include="Content\bootstrap-3.0.3\less\wells.less" />
     <None Include="Scripts\lib\jquery\jquery-2.0.0.intellisense.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.min.js" />
