--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\BotController.cs" />
+    <Compile Include="Services\BotRepository.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Extensions\HtmlExtensions.cs" />
     <Compile Include="Models\Controls\NavigationMenuItemModel.cs" />
@@ -145,7 +146,7 @@
     <Compile Include="Models\Account\ChangePasswordModel.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BotScriptRepository.cs" />
+    <Compile Include="Services\FileBotRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -260,9 +261,10 @@
     <Content Include="Content\bootstrap-3.0.3\less\utilities.less" />
     <Content Include="Content\bootstrap-3.0.3\less\variables.less" />
     <Content Include="Content\bootstrap-3.0.3\less\wells.less" />
-    <Content Include="Content\Home\Index.less" />
+    <Content Include="Content\Home\Play.less" />
     <Content Include="Content\Home\Profile.less" />
     <Content Include="Content\Bot\Edit.less" />
+    <Content Include="Content\Home\SetupMatch.less" />
     <None Include="Scripts\lib\jquery\jquery-2.0.0.intellisense.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.min.js" />
@@ -288,6 +290,7 @@
     <Content Include="Scripts\gosu\math\rectangleSpecs.js" />
     <Content Include="Scripts\gosu\math\vector.js" />
     <Content Include="Scripts\gosu\math\vectorSpecs.js" />
+    <Content Include="Scripts\Pages\Home\SetupMatch.js" />
     <Content Include="Scripts\rectangleCache.js" />
     <Content Include="Scripts\settings.js" />
     <Content Include="Scripts\SpecRunner.html" />
@@ -302,13 +305,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\ActionResults\" />
     <Folder Include="Models\Entities\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Play.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\Local.pubxml" />
@@ -325,6 +329,7 @@
     <Content Include="Views\Home\MyProfile.cshtml" />
     <Content Include="Views\Bot\Create.cshtml" />
     <Content Include="Views\Bot\Edit.cshtml" />
+    <Content Include="Views\Home\SetupMatch.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
