--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -208,10 +208,12 @@
     <Content Include="Scripts\bullet.js" />
     <Content Include="Scripts\collisionDetector.js" />
     <Content Include="Scripts\engine.js" />
+    <Content Include="Scripts\events.js" />
     <Content Include="Scripts\fakeClock.js" />
     <Content Include="Scripts\gameClock.js" />
     <Content Include="Scripts\gameSpecs.js" />
     <Content Include="Scripts\gameVisualizer.js" />
+    <Content Include="Scripts\gosu\eventAggregator.js" />
     <Content Include="Scripts\legend.js" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine-html.js" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.css" />
