--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\ActionResults\HttpForbiddenResult.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\BotController.cs" />
+    <Compile Include="Controllers\DocsController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\MatchController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -184,6 +185,40 @@
     <Content Include="Content\bootstrap-3.0.3\js\tests\vendor\qunit.js" />
     <Content Include="Content\bootstrap-3.0.3\js\tooltip.js" />
     <Content Include="Content\bootstrap-3.0.3\js\transition.js" />
+    <Content Include="Content\font-awesome-4.0.3\css\font-awesome.css" />
+    <Content Include="Content\font-awesome-4.0.3\css\font-awesome.min.css" />
+    <Content Include="Content\font-awesome-4.0.3\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\google-code-prettify\lang-apollo.js" />
+    <Content Include="Content\google-code-prettify\lang-basic.js" />
+    <Content Include="Content\google-code-prettify\lang-clj.js" />
+    <Content Include="Content\google-code-prettify\lang-css.js" />
+    <Content Include="Content\google-code-prettify\lang-dart.js" />
+    <Content Include="Content\google-code-prettify\lang-erlang.js" />
+    <Content Include="Content\google-code-prettify\lang-go.js" />
+    <Content Include="Content\google-code-prettify\lang-hs.js" />
+    <Content Include="Content\google-code-prettify\lang-lisp.js" />
+    <Content Include="Content\google-code-prettify\lang-llvm.js" />
+    <Content Include="Content\google-code-prettify\lang-lua.js" />
+    <Content Include="Content\google-code-prettify\lang-matlab.js" />
+    <Content Include="Content\google-code-prettify\lang-ml.js" />
+    <Content Include="Content\google-code-prettify\lang-mumps.js" />
+    <Content Include="Content\google-code-prettify\lang-n.js" />
+    <Content Include="Content\google-code-prettify\lang-pascal.js" />
+    <Content Include="Content\google-code-prettify\lang-proto.js" />
+    <Content Include="Content\google-code-prettify\lang-r.js" />
+    <Content Include="Content\google-code-prettify\lang-rd.js" />
+    <Content Include="Content\google-code-prettify\lang-scala.js" />
+    <Content Include="Content\google-code-prettify\lang-sql.js" />
+    <Content Include="Content\google-code-prettify\lang-tcl.js" />
+    <Content Include="Content\google-code-prettify\lang-tex.js" />
+    <Content Include="Content\google-code-prettify\lang-vb.js" />
+    <Content Include="Content\google-code-prettify\lang-vhdl.js" />
+    <Content Include="Content\google-code-prettify\lang-wiki.js" />
+    <Content Include="Content\google-code-prettify\lang-xq.js" />
+    <Content Include="Content\google-code-prettify\lang-yaml.js" />
+    <Content Include="Content\google-code-prettify\prettify.css" />
+    <Content Include="Content\google-code-prettify\prettify.js" />
+    <Content Include="Content\google-code-prettify\run_prettify.js" />
     <Content Include="Content\GosuArena.less" />
     <Content Include="Global.asax" />
     <Content Include="Infrastructure\SQL\DefaultData.sql" />
@@ -271,6 +306,24 @@
     <Content Include="Content\User\Profile.less" />
     <Content Include="Content\Bot\Edit.less" />
     <Content Include="Content\Match\Setup.less" />
+    <Content Include="Content\font-awesome-4.0.3\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\font-awesome-4.0.3\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\font-awesome-4.0.3\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\font-awesome-4.0.3\fonts\FontAwesome.otf" />
+    <Content Include="Content\font-awesome-4.0.3\less\bordered-pulled.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\core.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\fixed-width.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\font-awesome.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\icons.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\larger.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\list.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\mixins.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\path.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\rotated-flipped.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\spinning.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\stacked.less" />
+    <Content Include="Content\font-awesome-4.0.3\less\variables.less" />
+    <Content Include="Content\Docs\Index.less" />
     <None Include="Scripts\lib\jquery\jquery-2.0.0.intellisense.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.min.js" />
@@ -338,6 +391,7 @@
     <Content Include="Views\Match\Setup.cshtml" />
     <Content Include="Views\User\ReadOnlyProfile.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Docs\Index.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
