Fixed 404 error for font awesome woff font

--- a/src/GosuArena/GosuArena/Web.config
+++ b/src/GosuArena/GosuArena/Web.config
@@ -89,6 +89,10 @@
            resourceType="File" preCondition="" />
     </handlers>
 
+    <staticContent>
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+    </staticContent>
+    
   </system.webServer>
 
   <elmah>
