--- a/src/GosuArena/GosuArena/Web.config
+++ b/src/GosuArena/GosuArena/Web.config
@@ -90,6 +90,7 @@
     </handlers>
 
     <staticContent>
+      <remove fileExtension=".woff"/>
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
     </staticContent>
     
