--- a/src/GosuArena/packages/Gosu.Commons.1.1.6/Gosu.Commons.1.1.6.nuspec
+++ b/src/GosuArena/packages/Gosu.Commons.1.1.6/Gosu.Commons.1.1.6.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Gosu.Commons</id>
-    <version>1.1.4</version>
+    <version>1.1.6</version>
     <authors>Erik Öjebo</authors>
     <owners>Erik Öjebo</owners>
     <projectUrl>https://github.com/erikojebo/gosu.commons/wiki</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Lots of useful stuff for doing all kinds of things in .NET</description>
-    <releaseNotes>Added string extensions</releaseNotes>
+    <releaseNotes>Minor changes to extensions</releaseNotes>
     <copyright>Copyright 2013</copyright>
     <tags>.net helpers utils gosu commons reflection dynamic</tags>
   </metadata>
