Added separate handling of training and demo bots

--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -246,18 +246,18 @@
     <Content Include="Scripts\bot.js" />
     <Content Include="Scripts\botOptions.js" />
     <Content Include="Scripts\botSpecs.js" />
-    <Content Include="Scripts\bots\bot1.js" />
-    <Content Include="Scripts\bots\bot2.js" />
-    <Content Include="Scripts\bots\bot3.js" />
-    <Content Include="Scripts\bots\bot4.js" />
+    <Content Include="Scripts\bots\randomizer.js" />
+    <Content Include="Scripts\bots\demo.bot2.js" />
+    <Content Include="Scripts\bots\demo.bot3.js" />
+    <Content Include="Scripts\bots\demo.bot4.js" />
     <Content Include="Scripts\bots\circler.js" />
-    <Content Include="Scripts\bots\cornerCollider.js" />
-    <Content Include="Scripts\bots\cornerCollider2.js" />
-    <Content Include="Scripts\bots\eastbot.js" />
-    <Content Include="Scripts\bots\northbot.js" />
-    <Content Include="Scripts\bots\southbot.js" />
+    <Content Include="Scripts\bots\demo.cornerCollider.js" />
+    <Content Include="Scripts\bots\demo.cornerCollider2.js" />
+    <Content Include="Scripts\bots\demo.eastbot.js" />
+    <Content Include="Scripts\bots\demo.northbot.js" />
+    <Content Include="Scripts\bots\demo.southbot.js" />
     <Content Include="Scripts\bots\turnbot.js" />
-    <Content Include="Scripts\bots\westbot.js" />
+    <Content Include="Scripts\bots\demo.westbot.js" />
     <Content Include="Scripts\bullet.js" />
     <Content Include="Scripts\collisionDetector.js" />
     <Content Include="Scripts\engine.js" />
