--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -341,6 +341,7 @@
     <Content Include="Content\font-awesome-4.0.3\less\stacked.less" />
     <Content Include="Content\font-awesome-4.0.3\less\variables.less" />
     <Content Include="Content\Docs\Index.less" />
+    <Content Include="Content\GosuArenaVariables.less" />
     <None Include="Scripts\lib\jquery\jquery-2.0.0.intellisense.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.js" />
     <Content Include="Scripts\lib\jquery\jquery-2.0.0.min.js" />
