--- a/src/GosuArena/GosuArena/packages.config
+++ b/src/GosuArena/GosuArena/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net40" />
   <package id="dotless" version="1.4.0.0" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net40" />
@@ -7,6 +8,7 @@
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
@@ -14,6 +16,7 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net40" />
   <package id="WeenyMapper" version="1.0.4" targetFramework="net40" />
 </packages>
