Changed script structure to enable wildcards to be used when creating script bundles for the game scripts

--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -253,11 +253,11 @@
     <Content Include="Infrastructure\SQL\ElmahPermissions.sql" />
     <Content Include="Infrastructure\SQL\Elmah.sql" />
     <Content Include="Infrastructure\SQL\CreateDatabase.sql" />
-    <Content Include="Scripts\actionQueue.js" />
-    <Content Include="Scripts\arenaState.js" />
-    <Content Include="Scripts\bot.js" />
-    <Content Include="Scripts\botOptions.js" />
-    <Content Include="Scripts\botSpecs.js" />
+    <Content Include="Scripts\game\actionQueue.js" />
+    <Content Include="Scripts\game\arenaState.js" />
+    <Content Include="Scripts\game\bot.js" />
+    <Content Include="Scripts\game\botOptions.js" />
+    <Content Include="Scripts\game\specs\botSpecs.js" />
     <Content Include="Scripts\bots\bootstrapping\defaultBotScript.js" />
     <Content Include="Scripts\bots\randomizer.js" />
     <Content Include="Scripts\bots\demo.bot2.js" />
@@ -271,22 +271,22 @@
     <Content Include="Scripts\bots\demo.southbot.js" />
     <Content Include="Scripts\bots\turnbot.js" />
     <Content Include="Scripts\bots\demo.westbot.js" />
-    <Content Include="Scripts\bullet.js" />
-    <Content Include="Scripts\collisionDetector.js" />
-    <Content Include="Scripts\engine.js" />
-    <Content Include="Scripts\events.js" />
-    <Content Include="Scripts\fakeClock.js" />
-    <Content Include="Scripts\gameClock.js" />
-    <Content Include="Scripts\gameSpecs.js" />
-    <Content Include="Scripts\gameVisualizer.js" />
+    <Content Include="Scripts\game\bullet.js" />
+    <Content Include="Scripts\game\collisionDetector.js" />
+    <Content Include="Scripts\game\engine.js" />
+    <Content Include="Scripts\game\events.js" />
+    <Content Include="Scripts\game\fakeClock.js" />
+    <Content Include="Scripts\game\gameClock.js" />
+    <Content Include="Scripts\game\specs\gameSpecs.js" />
+    <Content Include="Scripts\game\gameVisualizer.js" />
     <Content Include="Scripts\gosu\eventAggregator.js" />
-    <Content Include="Scripts\gosu\jasmineMatchers.js" />
-    <Content Include="Scripts\legend.js" />
+    <Content Include="Scripts\gosu\specs\jasmineMatchers.js" />
+    <Content Include="Scripts\game\legend.js" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine-html.js" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.css" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.js" />
     <Content Include="Scripts\gosu\snapshot.js" />
-    <Content Include="Scripts\gosu\snapshotSpecs.js" />
+    <Content Include="Scripts\gosu\specs\snapshotSpecs.js" />
     <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\bootstrap-3.0.3\fonts\glyphicons-halflings-regular.woff" />
@@ -365,28 +365,28 @@
     <Content Include="Scripts\lib\jquery\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\lib\knockout\knockout-3.0.0.js" />
     <Content Include="Scripts\lib\knockout\knockout.protected-observable.js" />
-    <Content Include="Scripts\match.js" />
+    <Content Include="Scripts\Pages\Match\match.js" />
     <Content Include="Scripts\gosu\math\collissions.js" />
-    <Content Include="Scripts\gosu\math\collissionsSpecs.js" />
+    <Content Include="Scripts\gosu\math\specs\collissionsSpecs.js" />
     <Content Include="Scripts\gosu\math\line.js" />
-    <Content Include="Scripts\gosu\math\lineSpecs.js" />
-    <Content Include="Scripts\gosu\math\matchers.js" />
+    <Content Include="Scripts\gosu\math\specs\lineSpecs.js" />
+    <Content Include="Scripts\gosu\math\specs\matchers.js" />
     <Content Include="Scripts\gosu\math\math.js" />
-    <Content Include="Scripts\gosu\math\mathSpecs.js" />
+    <Content Include="Scripts\gosu\math\specs\mathSpecs.js" />
     <Content Include="Scripts\gosu\math\point.js" />
-    <Content Include="Scripts\gosu\math\pointSpecs.js" />
+    <Content Include="Scripts\gosu\math\specs\pointSpecs.js" />
     <Content Include="Scripts\gosu\math\rectangle.js" />
-    <Content Include="Scripts\gosu\math\rectangleSpecs.js" />
+    <Content Include="Scripts\gosu\math\specs\rectangleSpecs.js" />
     <Content Include="Scripts\gosu\math\vector.js" />
-    <Content Include="Scripts\gosu\math\vectorSpecs.js" />
+    <Content Include="Scripts\gosu\math\specs\vectorSpecs.js" />
     <Content Include="Scripts\Pages\Bot\Edit.js" />
     <Content Include="Scripts\Pages\changetracking.js" />
     <Content Include="Scripts\Pages\Match\Setup.js" />
     <Content Include="Scripts\Pages\confirmation.js" />
-    <Content Include="Scripts\rectangleCache.js" />
-    <Content Include="Scripts\settings.js" />
+    <Content Include="Scripts\game\rectangleCache.js" />
+    <Content Include="Scripts\game\settings.js" />
     <Content Include="Scripts\SpecRunner.html" />
-    <Content Include="Scripts\userActionQueue.js" />
+    <Content Include="Scripts\game\userActionQueue.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
