--- a/src/GosuArena/GosuArena/packages.config
+++ b/src/GosuArena/GosuArena/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net40" />
   <package id="dotless" version="1.4.0.0" targetFramework="net40" />
+  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net40" />
   <package id="Gosu.Commons" version="1.1.6" targetFramework="net40" />
@@ -19,4 +20,5 @@
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
   <package id="WebGrease" version="1.5.2" targetFramework="net40" />
   <package id="WeenyMapper" version="1.0.4" targetFramework="net40" />
+  <package id="YUICompressor.NET" version="2.3.0.0" targetFramework="net40" />
 </packages>
