--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -390,7 +390,7 @@
     <Content Include="Scripts\Pages\Match\Setup.js" />
     <Content Include="Scripts\Pages\confirmation.js" />
     <Content Include="Scripts\game\rectangleCache.js" />
-    <Content Include="Scripts\game\settings.js" />
+    <Content Include="Scripts\game\gameSettings.js" />
     <Content Include="Scripts\SpecRunner.html" />
     <Content Include="Scripts\game\userActionQueue.js" />
     <Content Include="Web.config" />
