--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Models\Account\ChangePasswordModel.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Scripts\Pages\Match\matchViewModel.js" />
     <Compile Include="Services\FileBotRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -287,7 +288,7 @@
     <Content Include="Scripts\game\gameVisualizer.js" />
     <Content Include="Scripts\gosu\eventAggregator.js" />
     <Content Include="Scripts\gosu\specs\jasmineMatchers.js" />
-    <Content Include="Scripts\game\legend.js" />
+    <Content Include="Scripts\Pages\Match\legend.js" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine-html.js" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.css" />
     <Content Include="Scripts\lib\jasmine-1.3.0\jasmine.js" />
